--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.0.7",
+    "@story-protocol/core-sdk": "^1.0.0-rc.11",
     "@tanstack/react-query": "^5.28.4",
     "next": "^14.2.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "viem": "^2.8.12",
+    "viem": "^2.10.5",
     "wagmi": "^2.5.11"
   },
   "devDependencies": {
