--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.4.0",
     "@next/env": "^14.2.3",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@rainbow-me/rainbowkit": "^2.0.7",
     "@story-protocol/core-sdk": "^1.0.0-rc.11",
     "@tanstack/react-query": "^5.28.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "lucide-react": "^0.378.0",
     "next": "^14.2.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-hook-form": "^7.51.4",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "^2.10.5",
-    "wagmi": "^2.5.11"
+    "wagmi": "^2.5.11",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^18.19.3",
