--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.4.0",
     "@next/env": "^14.2.3",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@rainbow-me/rainbowkit": "^2.0.7",
     "@story-protocol/core-sdk": "^1.0.0-rc.11",
@@ -19,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.2.4",
     "lucide-react": "^0.378.0",
     "next": "^14.2.3",
     "react": "^18.3.0",
