--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.4.0",
     "@next/env": "^14.2.3",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
@@ -25,6 +26,7 @@
     "framer-motion": "^11.2.4",
     "lucide-react": "^0.378.0",
     "next": "^14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.51.4",
